# csgoempire-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT
.github/workflows/: rust.yml
src/: constants.rs  lib.rs  util.rs
src/api/: mod.rs  request.rs
src/api/endpoints/: auctions.rs  block.rs  blocklist.rs  info.rs  inventory.rs  metadata.rs  mod.rs  sell.rs  settings.rs  trades.rs  transactions.rs  unblock.rs
src/api/endpoints/deposit/: bid.rs  create.rs  mod.rs  stats.rs
src/api/endpoints/deposit/cancel/: mod.rs  multiple.rs  single.rs
src/api/endpoints/withdraw/: cancel.rs  create.rs  items.rs  mod.rs
src/enums/: trade.rs
src/models/: mod.rs
src/models/enums/: bool.rs  mod.rs
src/models/structs/api/request/: mod.rs  settings.rs
src/models/structs/api/request/deposit/: bid.rs  cancel.rs  create.rs  mod.rs
src/models/structs/api/request/withdraw/: create.rs
src/models/structs/api/response/: auctions.rs  block.rs  blocklist.rs  info.rs  inventory.rs  metadata.rs  mod.rs  sell.rs  settings.rs  trades.rs  transactions.rs
src/models/structs/api/response/deposit/: bid.rs  cancel.rs  mod.rs  stats.rs
src/models/structs/api/response/withdraw/: create.rs  items.rs  mod.rs
src/models/traits/: endpoint.rs
src/socket/: builder.rs  constants.rs  event.rs  mod.rs
src/socket/models/response/: init.rs  mod.rs
src/socket/models/response/auction/: update.rs
src/socket/models/response/item/: new.rs
src/socket/models/response/tradestatus/: update.rs
