[package]
name = "csgoempire"
version = "0.2.0"
authors = ["WeirdPtr <WeirdPtr@WeirdPtr.com>"]
description = "CSGOEmpire REST-API and Socket Bindings"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/WeirdPtr/csgoempire-rs"
keywords = ["csgoempire", "api", "websocket"]
include = ["src/**/*", "LICENSE-MIT", "LICENSE-APACHE", "README.md"]
exclude = ["src/main.rs"]

[dependencies]
socketio = { git = "https://github.com/WeirdPtr/socketio-rs", version = "*", default-features = false, optional = true }
#
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
futures-util = { version = "0.3", optional = true }
rand = { version = "0.8", optional = true }
base64 = { version = "0.21", optional = true }
regex = { version = "1.10", optional = true }
serde_repr = "0.1.17"

[features]
default = ["full"]
full = ["socket", "socket-proxy"]
socket = ["socketio", "futures-util", "rand", "base64", "regex"]
socket-proxy = ["socket", "socketio/proxy"]
