[package]
name = "csgoempire"
version = "0.2.0"
authors = ["WeirdPtr <WeirdPtr@WeirdPtr.com>"]
description = "CSGOEmpire REST-API and Socket Bindings"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/WeirdPtr/csgoempire-rs"
keywords = ["csgoempire", "api", "websocket"]
include = ["src/**/*", "LICENSE-MIT", "LICENSE-APACHE", "README.md"]
exclude = ["src/main.rs"]

[dependencies]
tokio = { version = "1.35", features = ["macros"] }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_repr = "0.1.17"
futures-util = { version = "0.3", optional = true }
rand = { version = "0.8", optional = true }
base64 = { version = "0.21", optional = true }
regex = { version = "1.10", optional = true }
http = { version = "1.0.0", optional = true }
socketio = { git = "https://github.com/WeirdPtr/socketio-rs", version = "*", optional = true }
lazy_static = { version = "1.4.0", optional = true }

[features]
default = ["native-tls"]
full = ["socket", "socket-proxy", "static-http-client"]
socket = [
    "base64",
    "dep:socketio",
    "dep:futures-util",
    "dep:rand",
    "dep:regex",
    "dep:http",
]
socket-proxy = ["socket", "socketio/proxy"]
static-http-client = ["dep:lazy_static"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/default-tls"]
